// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBoxHeader Test 1`] = `
<Fragment>
  <Component
    className=""
    headingLevel="h1"
    size="2xl"
  >
    This is a ModalBox header
  </Component>
</Fragment>
`;

exports[`ModalBoxHeader Test hideTitle 1`] = `""`;

exports[`ModalBoxHeader Test with H3 1`] = `
<Fragment>
  <Component
    className=""
    headingLevel="h3"
    size="2xl"
  >
    This is a ModalBox header
  </Component>
</Fragment>
`;
